--- a/Resources/CSS/general.css
+++ b/Resources/CSS/general.css
@@ -1,39 +1,66 @@
 body{
 	font-family: 'Josefin Sans', sans-serif;
+	
 	margin: 0px;
+	
 	padding: 0px;
-	background-image: url("../Images/code6.png");
+	
+	/** background-image: url("../Images/grass.jpg");
+ **/	
 	background-color: rgb(242, 240, 239);
+
 	background-size: cover;
+	
 	background-repeat: no-repeat;
+	
 	background-attachment: fixed;
+
 }
 .italic{
+
 	font-style: italic;
+
 }
+
 .center{
+	
 	text-align: center;
+
 }
-p{
+
+p	{
+
 	font-size: 20px;
+
 }
+
 .icon{
 	border-radius: 5px;
 }
+
 .break{
 	margin-bottom: 3em;
 }
+
 header{
 	position: fixed;
-	width: 100%;
-	margin: 0px;
-	padding: 0px;
-	background-color: rgba(78, 78, 78, 1);
-	z-index: 3;
-	box-shadow: 0px 0px 15px 3px #666666;
+	
+width: 100%;
+	
+margin: 0px;
+	
+padding: 0px;
+	
+background-color: rgba(78, 78, 78, 1);
+	
+z-index: 3;
+	
+box-shadow: 0px 0px 15px 3px #666666;
 }
+
 footer{ /*This thing doesn't work, but I decided to leave it in case I figure out how to fix it later*/
 	position: absolute;
+
 	bottom: 0;
 	left:0;
 	right:0;
@@ -44,6 +71,7 @@ footer{ /*This thing doesn't work, but I decided to leave it in case I figure ou
 	z-index: 3;
 	box-shadow: 0px 0px 15px 1px #666666;
 }
+
 .besideImage{
 	display: inline-block;
 }
@@ -63,6 +91,12 @@ footer{ /*This thing doesn't work, but I decided to leave it in case I figure ou
 	color: white;
 	font-size: 40px;
 	text-decoration: none;
+}
+
+#subTitle{
+	color: white;
+	font-size: 20px;
+     text-align: center;  text-decoration: none;
 }
 a:hover{
 	color: #b0b0b0;
